--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_blue: ^0.8.0
   auto_size_text: ^3.0.0
+  bordered_text: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/training.jpg
+    - assets/images/history.jpg
+    - assets/images/settings.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
