startet working on graphs and bluetooth connection but not working atm

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_blue: ^0.8.0
   auto_size_text: ^3.0.0
   bordered_text: ^2.0.0
+  fl_chart: ^0.55.2
+  esense_flutter: ^0.6.2
 
 dev_dependencies:
   flutter_test:
